<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginPersistente</string>
    <string name="action_settings">Settings</string>
    <string name="entrada_email">Usuário:</string>
    <string name="entrada_senha">Senha:</string>
    <string name="botaoEntrar">Entrar</string>
    <string name="consultarSolicitacao">Consultar Solicitações</string>
    <string name="consultarEmenta">Consultar Ementa</string>
    <string name="title_activity_bemvindo">Bem-vindo!</string>
    <string name="title_activity_meunavegador">Navegador</string>
    <string name="tipoRequerimento">Tipo de Requerimento:</string>
    <string name="dataCadastro">Data de Cadastro:</string>
    <string name="situacaoAtual">Situação Atual:</string>
    <string name="dataSituacao">Data alteração situação:</string>
</resources>